force-app/main/default/objects/Observation_Event__e/Observation_Event__e.object-meta.xml
<CustomObject>
    <label>Observation Event</label>
    <pluralLabel>Observation Events</pluralLabel>
</CustomObject>