force-app/main/default/objects/Observation_Event__e/fields/CodeSet_Id__c.field-meta.xml
<CustomField>
    <fullName>CodeSet_Id__c</fullName>
    <label>Code Set Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>