force-app/main/default/objects/Observation_Event__e/fields/CodeSetId__c.field-meta.xml
<CustomField>
    <fullName>CodeSetId__c</fullName>
    <label>Code Set Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>