force-app/main/default/objects/Observation_Event__e/fields/ObservationDate__c.field-meta.xml
<CustomField>
    <fullName>ObservationDate__c</fullName>
    <label>ObservationDate</label>
    <type>DateTime</type>
</CustomField>