force-app/main/default/objects/Observation_Event__e/fields/ObservationName__c.field-meta.xml
<CustomField>
    <fullName>ObservationName__c</fullName>
    <label>Observation Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>