force-app/main/default/objects/Observation_Event__e/fields/ObservationValue__c.field-meta.xml
<CustomField>
    <fullName>ObservationValue__c</fullName>
    <label>ObservationValue</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>