force-app/main/default/objects/Observation_Event__e/fields/ObservedSubjectId__c.field-meta.xml
<CustomField>
    <fullName>ObservedSubjectId__c</fullName>
    <label>Observed Subject Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>