force-app/main/default/objects/Observation_Event__e/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <length>18</length>
    <type>Text</type>
</CustomField>